#985 Add support to establish a connection via an ssh tunnel. Ssh tunnel management is done in new SshTunnelActor. The tunnel is controlled (open/close) with the existing state machine in BaseClientActor. Add connecting via tunnel for existing protocols (except Kafka, which requires multiple connections to bottstrap server and zookeeper).
Signed-off-by: Dominik Guggemos <dominik.guggemos@bosch.io>